# HBUT-RM-CV-2022

./: CMakeLists.txt  main.cpp
UltraMultiThread/: CMakeLists.txt
UltraMultiThread/include/umt/: Message.hpp  ObjManager.hpp
asset/: armor_lihua_3.config  camera-param.yml
asset/para/: conv1_b  conv2_w  conv3_w  fc1_b  fc1_w
autoaim/: CMakeLists.txt  autoaim.cpp  autoaim.hpp
autoaim/detector/: detector.cpp  detector.h
autoaim/detector/classifier/: ArmorNumClassifier.cpp  ArmorNumClassifier.h  classifier.cpp
autoaim/detector/find/: armor_box.cpp  find_armor_box.cpp  find_light_blobs.cpp
autoaim/predictor/: PredictorAdaptiveEKF.cpp  PredictorKalman.cpp  PredictorKalman.h
core_io/: CMakeLists.txt  robot.cpp  robot.hpp  sensors.cpp  sensors.hpp
core_io/ExtImu/: ExtImu.cpp  ExtImu.hpp
core_io/MindVision/: MindVision.cpp  MindVision.hpp
core_io/Video_mode/: video_wrapper.cpp  video_wrapper.h
img_show/: CMakeLists.txt  img_show.cpp  img_show.h
others/: armor_lihua.config
others/include/: log.h  options.h
others/src/: options.cpp
tools/1-7/: conv1_b  conv1_w  conv2_b  conv2_w  conv3_b  conv3_w  fc1_b  fc1_w  fc2_b  fc2_w
tools/1-8/: conv1_w  conv2_b  conv3_b  fc2_b  fc2_w
